--- a/date/2024-10/index.htm
+++ b/date/2024-10/index.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-19">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、日本、美国、韩国、香港等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-18">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-18-clash-windows.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-09">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-9-node-share.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/5faefa7f3266b2052cc429ac9dbbdaf6.webp" alt="10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-9-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了韩国、欧洲、香港、日本、加拿大、新加坡、美国等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2024-10/page-2.htm">2</a></li> <li><a href="/date/2024-10/page-2.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" title="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接">4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-high-speed-nodes.htm" title="8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-19-free-node-subscribe.htm" title="4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-22-node-share.htm" title="9月22日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">9月22日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-9-clash-node.htm" title="7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-26-free-v2ray.htm" title="9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-27-node-share.htm" title="3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" title="9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-4-free-ssr-subscribe.htm" title="8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-10-node-share.htm" title="6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-9-node-share-links.htm" title="6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-21-free-subscribe-node.htm" title="4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-6-free-node-subscribe.htm" title="7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-3-free-ssr-node.htm" title="9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-27-free-v2ray.htm" title="7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-3-shadowrocket-node.htm" title="4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接">4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
