--- a/free-nodes/2024-10-18-clash-windows.htm
+++ b/free-nodes/2024-10-18-clash-windows.htm
@@ -107,6 +107,7 @@
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/10/0-20241018.yaml</p><p>https://clashgithub.github.io/uploads/2024/10/1-20241018.yaml</p><p>https://clashgithub.github.io/uploads/2024/10/2-20241018.yaml</p><p>https://clashgithub.github.io/uploads/2024/10/3-20241018.yaml</p><p>https://clashgithub.github.io/uploads/2024/10/4-20241018.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/10/0-20241018.txt</p><p>https://clashgithub.github.io/uploads/2024/10/1-20241018.txt</p><p>https://clashgithub.github.io/uploads/2024/10/2-20241018.txt</p><p>https://clashgithub.github.io/uploads/2024/10/3-20241018.txt</p><p>https://clashgithub.github.io/uploads/2024/10/4-20241018.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/10/20241018.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://reami.us/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:#c00;">星辰机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2024-10-17-node-share-links.htm">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -135,16 +136,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-4-node-share.htm" title="6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" title="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-6-node-share.htm" title="5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm" title="3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-7-28-free-ssr-subscribe.htm" title="7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-16-free-ssr-subscribe.htm" title="6月16日→21.9M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月16日→21.9M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-6-free-clash.htm" title="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接">4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-25-free-ssr-node.htm" title="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-17-node-share.htm" title="7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-14-free-node-subscribe-links.htm" title="3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" title="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-8-node-share.htm" title="5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-22-free-high-speed-nodes.htm" title="7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-ssr-node.htm" title="10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-11-clash-node-daily-updates.htm" title="9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -156,7 +157,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
